create products endpoint added
